test/libhyperion/syntaxTests/parsing/function_type_as_parameter.hyp
contract test {
    function f(function(uint) external returns (uint) g) internal returns (uint a) {
        return g(1);
    }
}
// ----
// TypeError 4888: (31-71): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
